Fix select dialog padding on mobile (#2685)

--- a/src/components/dialogs/_dialog.scss
+++ b/src/components/dialogs/_dialog.scss
@@ -465,7 +465,7 @@ $vzb-dialog-content-height: 250px;
           }
 
           >.vzb-dialog-buttons {
-            padding: 0 0 5px;
+            padding: 5px 15px;
           }
         }
       }
